# frychat

./: CMakeLists.txt  clickedlabel.cpp  clickedlabel.h  config.ini  global.cpp  global.h  httpmgr.cpp  httpmgr.h  images.qrc  logindialog.cpp  logindialog.h  logindialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  registerdialog.cpp  registerdialog.h  registerdialog.ui  resetdialog.cpp  resetdialog.h  resetdialog.ui  singleton.h  tcpmgr.cpp  tcpmgr.h  timerbtn.cpp  timerbtn.h
images/: logo.rc
style/: stylesheet.qss
